# agentic-sdlc

./: .gitignore  AGENTS.md  AMP.md  ANTIGRAVITY.md  CLAUDE.md  GEMINI.md  NEED-TO-FOCUS.md  README.md  agentic-sdlc-framework.md  implementation_plan.md  multi-agent-orchestration-draft.md  package.json  pyproject.toml  reveiw_temparory.md  task.md  templateplace.md
.claude-plugin/: plugin.json
.codex/: INSTALL.md
.github/workflows/: evals.yml
.opencode/: INSTALL.md
docs/: agentic-sdlc-framework.md  future-platforms.md  getting-started.md  installation.md  skill-reference.md  skill-testing-plan.md  workflow-brownfield.md  workflow-greenfield.md
docs/architecture/: data-domain.md  existing-system.md
docs/future/: README.md  future-platforms.md  release-plan.md  skill-evals-implementation-plan.md
docs/sdlc/epics/: implementation-plan.md  installation-plan.md  release-plan.md
docs/sdlc/retrospectives/: code-review-2026-04-11.md  code-review-2026-04-13.md
docs/sdlc/workspaces/: tech-plan-skills-evals.md
scripts/: init-context.sh
skills/brownfield-brainstorm/: SKILL.md
skills/brownfield-design/: SKILL.md
skills/brownfield-tech-plan/: SKILL.md
skills/code-review/: SKILL.md
skills/coding-constitution/: SKILL.md
skills/context-harvest/: SKILL.md
skills/critical-review/: SKILL.md
skills/design-system/: SKILL.md
skills/hitl-protocol/: SKILL.md
skills/implementation/: SKILL.md
skills/implementation-planning/: SKILL.md
skills/inception/: SKILL.md
skills/retrospective/: SKILL.md
skills/stage-gates/: SKILL.md
skills/story-breakdown/: SKILL.md
skills/tech-architecture/: SKILL.md
skills/testing/: SKILL.md
skills/using-agentic-sdlc/: SKILL.md
skills/writing-skills/: SKILL.md
src/agentic_sdlc/: cli.py  dashboard.py
src/agentic_sdlc/core/: AGENTS.md  AMP.md  ANTIGRAVITY.md  CLAUDE.md  GEMINI.md
src/agentic_sdlc/eval/: __init__.py  consistency.py  harness.py  models.py  utils.py  validator.py
src/agentic_sdlc/fixtures/asdlc-code-review/: tested-status-required-001.yaml
src/agentic_sdlc/fixtures/asdlc-git-discipline/: commit-at-end-001.yaml  direct-to-main-001.yaml  epic-branch-default-001.yaml
src/agentic_sdlc/skills/asdlc-inception/: SKILL.md  (+1 more)
src/agentic_sdlc/templates/: adr-template.md  mockups-template.md  story-template.md  task-graph-template.md  workspace-template.md
templates/: brd-template.md  design-system-template.md  implementation-plan-template.md  retrospective-template.md  story-template.md  test-plan-template.md  workspace-template.md
tests/: test_cli.py
(+67 files in other folders)
