[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-sdlc"
version = "1.0.0"
description = "An agentic skills framework & software development lifecycle methodology for autonomous coding agents."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Salauddin", email = "salauddin.ee@gmail.com" }
]
license = "MIT"
keywords = ["agentic", "sdlc", "ai", "coding-agent", "skills"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Software Development :: Documentation",
]
license-files = ["LICENSE"]
dependencies = [
    "click>=8.1.0",
    "pyyaml>=6.0.0"
]

[project.urls]
Homepage = "https://github.com/salauddin-ee/agentic-sdlc"
Repository = "https://github.com/salauddin-ee/agentic-sdlc"
Issues = "https://github.com/salauddin-ee/agentic-sdlc/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
asdlc = "agentic_sdlc.cli:main"
asdlc-dev = "agentic_sdlc.cli:dev_main"

[tool.setuptools.package-data]
"agentic_sdlc" = ["skills/**/*.md", "core/AGENTS.md", "fixtures/**/*.yaml"]

[tool.setuptools.packages.find]
where = ["src"]
